<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#fff"
    android:layout_height="match_parent"
    tools:context=".useAppActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        app:titleTextColor="#FFFFFF"
        android:background="@drawable/layout2_bg"
        app:title="Tutorial"/>

    <TextView
        android:id="@+id/howitworks"
        android:layout_width="wrap_content"
        android:text="@string/Hading"
        android:textSize="32sp"
        android:textStyle="normal"
        android:layout_below="@id/toolbar"
        android:layout_margin="12dp"
        android:textColor="#DA6AF4"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_below="@id/howitworks"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:text="@string/Text"
        android:textSize="18sp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_below="@id/text1"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:text="@string/text1"
        android:textSize="18sp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_below="@id/text2"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:text="@string/text2"
        android:textSize="18sp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_below="@id/text3"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:text="@string/text3"
        android:textSize="18sp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text5"
        android:layout_width="wrap_content"
        android:layout_below="@id/text4"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:text="@string/text4"
        android:textSize="18sp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text6"
        android:layout_width="wrap_content"
        android:layout_below="@id/text5"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:text="@string/text5"
        android:textSize="18sp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text7"
        android:layout_below="@id/text6"
        android:layout_width="wrap_content"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:text="@string/text6"
        android:textSize="18sp"
        android:layout_height="wrap_content"/>


    </RelativeLayout>