<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/layout2_bg"
    android:layout_height="match_parent"
    tools:context=".VerifyAccount">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/app_name"
        android:textSize="26sp"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:layout_margin="20dp"
        android:textStyle="bold"
        android:id="@+id/app_name"
        android:textColor="#fff"
        android:layout_height="wrap_content"/>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/app_name"
        android:background="@drawable/bg_dialog"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/sent_mail_png"
            android:layout_height="280dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_marginTop="-20dp"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content"
                android:src="@drawable/sent_png"
                android:contentDescription="@string/todo" />

        </RelativeLayout>

        <TextView
            android:id="@+id/check_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sent_mail_png"
            android:textSize="24sp"
            android:layout_marginTop="-50dp"
            android:textColor="#B3000000"
            android:layout_centerHorizontal="true"
            android:text="@string/verify_your_email" />

        <View
            android:layout_width="match_parent"
            android:padding="1dp"
            android:id="@+id/view_1"
            android:layout_below="@id/check_mail"
            android:layout_centerHorizontal="true"
            android:background="#A8000000"
            android:layout_margin="25dp"
            android:layout_height="0.7dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_below="@id/view_1"
            android:id="@+id/text"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:padding="18dp"
            android:textAlignment="center"
            android:singleLine="false"
            android:layout_centerHorizontal="true"
            android:text="@string/text_2"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btn_verify_mail"
            android:layout_below="@id/text"
            android:textColor="#fff"
            android:textStyle="normal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/verify_email"
            android:background="@drawable/button_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:spinning_bar_color="#FFF"
            android:textSize="18sp"
            android:layout_margin="10dp"/>

        <View
            android:layout_width="100dp"
            android:id="@+id/view2"
            android:padding="20dp"
            android:layout_margin="10dp"
            android:layout_centerHorizontal="true"
            android:background="#A8000000"
            android:layout_below="@id/btn_verify_mail"
            android:layout_height="0.7dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_below="@id/view2"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textAlignment="center"
            android:singleLine="false"
            android:padding="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/text_4"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" />


    </RelativeLayout>

</RelativeLayout>