<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_gravity="center"
android:background="@color/login_bk_color"
android:focusableInTouchMode="true"
android:gravity="center"
tools:context=".ForgetPasswordActivity">


        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:paddingTop="20dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="20dp">

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                <TextView
                        style="@style/viewParent.headerText.NoMode"
                        android:textColor="#DA6AF4"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:text="Forgot \nPassword" />

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="-1dp"
                        android:layout_marginEnd="0dp"
                        android:src="@drawable/ic_register_hero" />

                </RelativeLayout>

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_marginTop="40dp"
                        android:layout_height="match_parent">


                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/emailET"
                        android:hint="@string/login_email_hint"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />

                <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                        android:id="@+id/recoverBtn"
                        android:textColor="#fff"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:background="@drawable/button_bg"
                        android:layout_below="@id/emailET"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:text="@string/recover" />

                <TextView
                        android:id="@+id/loginTV"
                        style="@style/parent"
                        android:layout_below="@id/recoverBtn"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:text="@string/back_to_login"
                        android:textAlignment="center"
                        android:textColor="#DA6AF4"
                        android:textSize="17sp"
                        android:textStyle="bold" />
                </RelativeLayout>



                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <ProgressBar
                android:id="@+id/progressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_margin="22sp"
                android:visibility="gone"
                android:indeterminate="true"
                android:indeterminateTint="#DA6AF4" />

                </LinearLayout>

                </LinearLayout>
                </ScrollView>

                <View
                android:layout_width="11dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_side_bg" />

                <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="11dp"
                android:layout_marginBottom="30dp"/>

                </RelativeLayout>


